--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <body>
-            <h1>Mi Pimea Página</h1>
+            <h1>Mi Primera Página</h1>
         </body>
     </head>
 </html>
